--- a/codi/3_analisis_TBC2B.Rmd
+++ b/codi/3_analisis_TBC2B.Rmd
@@ -355,16 +355,19 @@ dt_agencia<-etiquetar(d=dt_agencia,taulavariables=conductor_agencia)
 dt_agencia<-etiquetar_valors(dt=dt_agencia,variables_factors=conductor_agencia,fulla="etiquetes",camp_etiqueta="etiqueta2")
 
 
-kkk<-dt_agencia %>% select(CIP,TB__PULMONAR,TB_PLEURAL,TB_PLEUROPULM,TB_LIMFATICA,TB_OSTEOART,TB_MILIAR,TB_GENITOURIN,TB_MENINGEA,TB_LARINGEA,TB_ALTRESLOC,PPD,RADIOLOGIA,PPD)
 
 
 
 # Events segons dades agencia
 # Capturar si l'event ve de dades d'agencia o NO 
 dt_temp<-select(dt_agencia,CIP,TBC_agencia=dt_agencia) %>% unique()
-
-
 dades<-dades %>% left_join(dt_temp,by="CIP")
+
+
+kkk<-dt_agencia %>% select(CIP,TB__PULMONAR,TB_PLEURAL,TB_PLEUROPULM,TB_LIMFATICA,TB_OSTEOART,TB_MILIAR,TB_GENITOURIN,TB_MENINGEA,TB_LARINGEA,TB_ALTRESLOC,PPD,RADIOLOGIA,PPD)
+dades<-dades %>% left_join(kkk,by="CIP")
+
+
 dades<-dades %>% mutate(event_tbc_agencia=ifelse(event_tbc==1 & TBC_agencia==0,0,event_tbc))
 # Surv Tbc agencia
 dades$surv_tbc_agencia<-with(dades,Surv(temps_tbc, event_tbc_agencia))
@@ -543,7 +546,7 @@ ggplot(data = dades_DM3, aes(HBA1c.valor))+
 
 #[07.03.2022]#
 
-table(dades_DM$VACUNA)
+#table(dades_DM$VACUNA)
 
 
 
@@ -577,6 +580,8 @@ dt_temp<-dades %>% filter(dtindex>20070101) %>%
             data0=lubridate::ymd(20070101),Sexo=sexe,dNaixement,
             lab_SexEdat=stringr::str_c(Sexo,lubridate::year(dNaixement)-lubridate::year(dtindex)),
             EV.TBC_cat,event_tbc,censura_tipo) 
+
+
 # Trio un parell per tipus de censura (Swich_group,Exitus,End of follow-up)
 dt_temp1 <- dt_temp %>% 
   group_by(id) %>% filter(sum(censura_tipo=="End of follow-up")>0) %>% ungroup(id) %>% 
@@ -588,6 +593,8 @@ dt_temp3 <- dt_temp %>% group_by(id) %>% filter(sum(censura_tipo=="Exitus")>0) %
   mostreig_ids("id",1,llavor)
 dt_temp<-dt_temp1 %>% bind_rows(dt_temp2) %>% bind_rows(dt_temp3) %>% arrange(desc(dtindex)) %>% 
   mutate(num=1:n(),id=as.factor(id))  # Generar id factor correlatiu
+
+
 # Mostrejo
 # llavor<-201
 # dt_temp <- dt_temp %>% mostreig_ids(id="id",n_mostra = 5,set_seed = llavor) %>% 
@@ -741,6 +748,62 @@ formu<-formula_compare(x="table2",y="",taulavariables = conductor_variables)
 descrTable(formu,data=dt_temp,show.p.overall = F,show.n = T, hide.no = T,hide = "No") %>% 
   export2md(caption = "Table  2. Baseline characteristics of patients in diabetic cohort")
 
+
+formu<-formula_compare(x="basalesJosep",y="EV.TBC_cat",taulavariables = conductor_variables)
+
+descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
+  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medias,Sd]")
+
+descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
+  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medianas,Min,Max]")
+
+
+
+
+dades_DM2<-dades %>% filter(grup=="Diabetis" & EV.TBC_cat=="Si")
+dades_DM3<-dades %>% filter(grup=="Diabetis" & EV.TBC_cat=="No")
+
+
+
+
+ggplot(data = dades_DM2, aes(HBA1c.valor))+
+   geom_histogram(bins = 10,aes(y =1*( ..count../sum(..count..)))) +
+    scale_y_continuous(name = "%", labels=scales::percent) +
+      labs(title="Distribució % dels valors HBA1c per decils agrupats per TBC", x ="valors HBA1c", y = "Percentatge")+
+        scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))+
+         scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9"))+
+           theme_classic()
+
+
+
+ggplot(data = dades_DM3, aes(HBA1c.valor))+
+   geom_histogram(bins = 10,aes(y =1*( ..count../sum(..count..)))) +
+    scale_y_continuous(name = "%", labels=scales::percent) +
+      labs(title="Distribució % dels valors HBA1c per decils agrupats per No TBC", x ="valors HBA1c", y = "Percentatge")+
+        scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))+
+         scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9"))+
+           theme_classic()
+
+
+
+
+
+
+dades<-mutate_at(dades, vars( starts_with("HbA1c_7") ), funs( if_else(.=="No"  | is.na(.)  ,"No","Si")))
+
+
+formu<-formula_compare(x="basalesJosep2",y="HbA1c_7",taulavariables = conductor_variables)
+
+
+descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
+  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medias,Sd]")
+
+descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
+  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medianas,Min,Max]")
+
+
+
+
 ```
 
 ## TABLE 3. Incidence of TB in DM and non-DM patients 
@@ -750,13 +813,40 @@ descrTable(formu,data=dt_temp,show.p.overall = F,show.n = T, hide.no = T,hide = 
 
 ```{r resultats5, message=FALSE, warning=FALSE, include=T, echo=FALSE,size="huge",eval = T}
 # T BASAL -------------
+
 res1<-dades %>% Resum_taxa_incidencia(evento="event_tbc",temps="anys_lliure_tbc",valorevent="1") 
 res1<-tibble::tibble(Group="Overall") %>% bind_cols(res1)
+
 res2<-dades %>% split(.$grup) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") 
+
 res3<-dades %>% split(.$grup2) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") %>% filter(Group!="Control")
+
 res4<-dades %>% split(.$grup3) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") %>% filter(Group!="Control")
+
+
+#fet 8.3.2022
+
+
+res5<-dades %>% split(.$HbA1c_7) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group")  %>% filter(Group=="Si")
+
+res6<-dades %>% split(.$HbA1c_7) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group")  %>% filter(Group=="No")
+
+
+
+
 res1 %>% bind_rows(res2) %>% bind_rows(res3) %>% bind_rows(res4) %>% 
   kable(digits = 2,caption = "Table 3. Incidence of TB in DM and non-DM patients ") %>% kableExtra::kable_styling()
+
+
+#fet 8.3.2022
+
+res1 %>% bind_rows(res5)  %>% bind_rows(res6)  %>%
+  kable(digits = 2,caption = "Table 3b. Incidence of TBc with DM patients  for  HbA1c<7.5% and HbA1c>=7.5%  ") %>% kableExtra::kable_styling()
+
+
+
+
+
 ```
 
 
