--- a/codi/1_lectura_TBC.Rmd
+++ b/codi/1_lectura_TBC.Rmd
@@ -41,6 +41,11 @@ source(here::here("codi","global_TBC.R"))
 ###############################################
 
 library("heaven",lib.loc="C:/Users/Ramon/Desktop/llibreria_R/heaven_2018")
+library("heaven",lib.loc="C:/Users/38122893W/Desktop/llibreria_R/heaven_2018")
+# Version="2018.08.09"
+# githubinstall::githubinstall("heaven",ref = "964bbbd",force = T)
+library("heaven",lib.loc="C:/Users/38122893W/Desktop/llibreria_R/heaven_2018")
+
 
 
 # 2. Paràmetres  ----------------------
