--- a/codi/3_analisis_TBC2B.Rmd
+++ b/codi/3_analisis_TBC2B.Rmd
@@ -16,7 +16,7 @@ output:
 params:
   metode: "dinamica2"  # "dinamica" / "dinamica2" / "estatica" / "PS" 
   subtitul: ""
-  test: TRUE
+  test: FALSE
 
 title: "Diabetes y Tuberculosis en Ciutat Vella (Barcelona). Estudio longitudinal de la asociación de las dos enfermedades en un distrito con alta prevalencia de tuberculosis"
 subtitle: "`r params$subtitul`"
@@ -357,15 +357,13 @@ dt_agencia<-etiquetar_valors(dt=dt_agencia,variables_factors=conductor_agencia,f
 
 
 
-
+#aqui hi ha error!!!
 # Events segons dades agencia
 # Capturar si l'event ve de dades d'agencia o NO 
 dt_temp<-select(dt_agencia,CIP,TBC_agencia=dt_agencia) %>% unique()
 dades<-dades %>% left_join(dt_temp,by="CIP")
 
 
-kkk<-dt_agencia %>% select(CIP,TB__PULMONAR,TB_PLEURAL,TB_PLEUROPULM,TB_LIMFATICA,TB_OSTEOART,TB_MILIAR,TB_GENITOURIN,TB_MENINGEA,TB_LARINGEA,TB_ALTRESLOC,PPD,RADIOLOGIA,PPD)
-dades<-dades %>% left_join(kkk,by="CIP")
 
 
 dades<-dades %>% mutate(event_tbc_agencia=ifelse(event_tbc==1 & TBC_agencia==0,0,event_tbc))
@@ -474,14 +472,14 @@ dades<-etiquetar(dades,taulavariables = conductor_variables,camp_descripcio = "D
 
 
 
-```{r JOPSEP: Baseline characteristics of the study variables between diabetics with and withou TB,include=T}
+```{r JOPSEP: Baseline characteristics of the study variables between diabetics with and withou TB,include=F,eval = F}
 
 #[03.03.2022]#
 
 #table(dades$grup)
 
 
-dades_DM<-dades %>% filter(grup=="Diabetis")
+#ades_DM<-dades %>% filter(grup=="Diabetis")
 
 #table(dades_DM$EV.TBC_cat)
 
@@ -743,6 +741,19 @@ descrTable(formu,data=dades,show.p.overall = T,show.n = T, hide.no = T,hide = "N
 ## TABLE 2. Baseline characteristics of patients in diabetic cohort 
 
 ```{r, include=T,eval = T}
+
+
+#cip::GARR144010100?????
+
+#kkk<-dt_agencia %>%
+#  select(CIP,TB__PULMONAR,TB_PLEURAL,TB_PLEUROPULM,TB_LIMFATICA,TB_OSTEOART,TB_MILIAR,TB_GENITOURIN,TB_MENINGEA,TB_LARINGEA,TB_ALTRESLOC,PPD,RADIOLOGIA,PPD)%>% unique()
+
+#dades<-dades %>% left_join(kkk,by="CIP")
+
+
+
+
+
 dt_temp<-dades %>% filter(grup=="Diabetis")
 formu<-formula_compare(x="table2",y="",taulavariables = conductor_variables)
 descrTable(formu,data=dt_temp,show.p.overall = F,show.n = T, hide.no = T,hide = "No") %>% 
@@ -795,11 +806,11 @@ dades<-mutate_at(dades, vars( starts_with("HbA1c_7") ), funs( if_else(.=="No"  |
 formu<-formula_compare(x="basalesJosep2",y="HbA1c_7",taulavariables = conductor_variables)
 
 
-descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
-  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medias,Sd]")
+#descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
+#  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medias,Sd]")
 
-descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
-  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medianas,Min,Max]")
+#descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
+#  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medianas,Min,Max]")
 
 
 
