--- a/codi/3_analisis_TBC2B.Rmd
+++ b/codi/3_analisis_TBC2B.Rmd
@@ -465,6 +465,7 @@ flow2 %>% DiagrammeRsvg::export_svg() %>% charToRaw() %>% rsvg::rsvg() %>%
 dades<-dades%>%mutate(HbA1c_7=ifelse(HBA1c.valor>=7.5,"Si","No"))
 #
 #
+#dades<-mutate_at(dades, vars( starts_with("HbA1c_7") ), funs( if_else(.=="No"  | is.na(.)  ,"No","Si")))
 
 #[07.03.2022]*
 #dades<-dades%>% left_join(kkk,by="CIP")
@@ -659,7 +660,7 @@ Nota 1: hi ha pacients classificats en DM1 i DM2. De moment es prioritza DM2
 Nota 2: Laparellament NO es manté en la comparativa de DM1 versus DM2
 
 
-```{r, include=T,eval = T}
+```{r, include=F,eval = T}
 # Mana DMT2
 dades<-dades %>% mutate(grup2=case_when(grup=="Control"~"Control",
                                         DG.DM1_cat=="Yes"~"DM1",
@@ -696,21 +697,17 @@ descrTable(formu,data=dades,show.p.overall = T,show.n = T, hide.no = T,hide = "N
 
 
 
-
-
-
-
 kkk<-dt_agencia %>%
-  select(CIP,MEDEA,INDIGENT,MORT,TB__PULMONAR,TB_PLEURAL,TB_PLEUROPULM,TB_LIMFATICA,TB_OSTEOART,TB_MILIAR,TB_GENITOURIN,TB_MENINGEA,TB_LARINGEA,TB_ALTRESLOC,PPD,RADIOLOGIA,PPD,BACTERIOL)%>% 
+  select(CIP,MEDEA,INDIGENT,GRUP_OCUP,MORT2,TB__PULMONAR,TB_PLEURAL,TB_PLEUROPULM,TB_LIMFATICA,TB_OSTEOART,TB_MILIAR,TB_GENITOURIN,TB_MENINGEA,TB_LARINGEA,TB_ALTRESLOC,PPD,RADIOLOGIA,PPD,BACTERIOL)%>% 
      unique()
 
-
 #cip::GARR144010100?????, preguntar a Jordi Real!
-kkk<-kkk%>% filter( CIP!="GARR144010100")
+kkk<-kkk%>% filter(CIP!="GARR144010100" |  CIP=="GARR144010100" & TB_PLEURAL=="2")
 
                    
 
 dades<-dades%>%left_join(kkk,by="CIP")
+dadesDM<-dades%>% filter(grup=="Diabetis")
 
 
 dt_temp<-dades %>% filter(grup=="Diabetis")
@@ -721,22 +718,24 @@ descrTable(formu,data=dt_temp,show.p.overall = F,show.n = T, hide.no = T,hide = 
 
 formu<-formula_compare(x="basalesJosep",y="EV.TBC_cat",taulavariables = conductor_variables)
 
-descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
-  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medias,Sd]")
-
-descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
-  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medianas,Min,Max]")
 
 
+descrTable(formu,data=dadesDM,show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
+  export2md(caption = "Tabla  2b. Características basales de las variables de estudio entre diabéticos con y sin TBC [Medias,Sd]")
 
-
-dades_DM2<-dades %>% filter(grup=="Diabetis" & EV.TBC_cat=="Si")
-dades_DM3<-dades %>% filter(grup=="Diabetis" & EV.TBC_cat=="No")
+descrTable(formu,data=dadesDM,show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
+  export2md(caption = "Tabla  2b. Características basales de las variables de estudio entre diabéticos con y sin TBC [Medianas,Min,Max]")
 
 
 
 
-ggplot(data = dades_DM2, aes(HBA1c.valor))+
+dadesDM2<-dades %>% filter(grup=="Diabetis" & EV.TBC_cat=="Si")
+dadesDM3<-dades %>% filter(grup=="Diabetis" & EV.TBC_cat=="No")
+
+
+
+
+ggplot(data = dadesDM2, aes(HBA1c.valor))+
    geom_histogram(bins = 10,aes(y =1*( ..count../sum(..count..)))) +
     scale_y_continuous(name = "%", labels=scales::percent) +
       labs(title="Distribució % dels valors HBA1c per decils agrupats per TBC", x ="valors HBA1c", y = "Percentatge")+
@@ -746,7 +745,7 @@ ggplot(data = dades_DM2, aes(HBA1c.valor))+
 
 
 
-ggplot(data = dades_DM3, aes(HBA1c.valor))+
+ggplot(data = dadesDM3, aes(HBA1c.valor))+
    geom_histogram(bins = 10,aes(y =1*( ..count../sum(..count..)))) +
     scale_y_continuous(name = "%", labels=scales::percent) +
       labs(title="Distribució % dels valors HBA1c per decils agrupats per No TBC", x ="valors HBA1c", y = "Percentatge")+
@@ -755,20 +754,18 @@ ggplot(data = dades_DM3, aes(HBA1c.valor))+
            theme_classic()
 
 
+
+
+
 dades<-mutate_at(dades, vars( starts_with("HbA1c_7") ), funs( if_else(.=="No"  | is.na(.)  ,"No","Si")))
-
-
 formu<-formula_compare(x="basalesJosep2",y="HbA1c_7",taulavariables = conductor_variables)
 
 
-descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
-  export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medias,Sd]")
+descrTable(formu,data=dadesDM%>%filter(EV.TBC_cat=="Si"),show.p.overall = T,show.n = T,method = 1,Q1=0,Q3=1) %>%
+  export2md(caption = "Tabla  2c. Características TBC según grado de control de la DM <7.5% us >=7.5% [Medias,Sd]")
 
-descrTable(formu,data=dades %>% filter(grup=="Diabetis"),show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
-
-export2md(caption = "Características basales de las variables de estudio entre diabéticos con y sin TBC [Medianas,Min,Max]")
-
-
+descrTable(formu,data=dadesDM%>% filter(EV.TBC_cat=="Si"),show.p.overall = T,show.n = T,method = 2,Q1=0,Q3=1) %>%
+  export2md(caption = "Tabla  2c. Características TBC según grado de control de la DM <7.5% us >=7.5% [Medias,Sd]")
 
 
 ```
@@ -784,6 +781,7 @@ export2md(caption = "Características basales de las variables de estudio entre 
 res1<-dades %>% Resum_taxa_incidencia(evento="event_tbc",temps="anys_lliure_tbc",valorevent="1") 
 res1<-tibble::tibble(Group="Overall") %>% bind_cols(res1)
 
+
 res2<-dades %>% split(.$grup) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") 
 
 res3<-dades %>% split(.$grup2) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") %>% filter(Group!="Control")
@@ -791,14 +789,15 @@ res3<-dades %>% split(.$grup2) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="eve
 res4<-dades %>% split(.$grup3) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") %>% filter(Group!="Control")
 
 
-#fet 8.3.2022
 
+##############
+#fet 8.3.2022#
+##############
 
-res5<-dades %>% split(.$HbA1c_7) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group")  %>% filter(Group=="Si")
+res1b<-dadesDM %>% Resum_taxa_incidencia(evento="event_tbc",temps="anys_lliure_tbc",valorevent="1") 
+res1b<-tibble::tibble(Group="Overall") %>% bind_cols(res1b)
 
-res6<-dades %>% split(.$HbA1c_7) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group")  %>% filter(Group=="No")
-
-
+res5<-dadesDM %>% split(.$HbA1c_7) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") 
 
 
 res1 %>% bind_rows(res2) %>% bind_rows(res3) %>% bind_rows(res4) %>% 
@@ -807,8 +806,8 @@ res1 %>% bind_rows(res2) %>% bind_rows(res3) %>% bind_rows(res4) %>%
 
 #fet 8.3.2022
 
-res1 %>% bind_rows(res5)  %>% bind_rows(res6)  %>%
-  kable(digits = 2,caption = "Table 3b. Incidence of TBc with DM patients  for  HbA1c<7.5% and HbA1c>=7.5%  ") %>% kableExtra::kable_styling()
+res1b %>% bind_rows(res5)  %>%
+  kable(digits = 2,caption = "Table 3b. Incidence of TBc with DM patients  for HbA1c>=7.5%  ") %>% kableExtra::kable_styling()
 
 
 
@@ -823,7 +822,7 @@ descrTable(surv_tbc~grup2,data=dades,show.ratio = T, byrow = T ,surv = T) %>% ex
 descrTable(surv_tbc~grup3,data=dades,show.ratio = T, byrow = T ,surv = T) %>% export2md(caption = "Incidència i Hazard Ratio de Tuberculosis")
 
 #10.3.2022:
-descrTable(surv_tbc~HbA1c_7,data=dades,show.ratio = T, byrow = T ,surv = T) %>% export2md(caption = "Incidència i Hazard Ratio de Tuberculosis")
+descrTable(surv_tbc~HbA1c_7,data=dadesDM,show.ratio = T, byrow = T ,surv = T) %>% export2md(caption = "Incidència i Hazard Ratio de Tuberculosis pacients amb DM")
 #plot(surv_tbc~HbA1c_7,data=dades,show.ratio = T, byrow = T ,surv = T)
 
 ```
@@ -834,7 +833,7 @@ descrTable(surv_tbc~HbA1c_7,data=dades,show.ratio = T, byrow = T ,surv = T) %>% 
 - Grup DM versus control, 
 - DM1 DM2, incident and prevalent versus Control
 
-```{r genero_HR, message=FALSE, warning=FALSE, include=T, echo=FALSE,size="huge",eval = T}
+```{r genero_HR, message=FALSE, warning=FALSE, include=T, echo=FALSE,size="huge",eval = F}
 # Estimació de HR complets de riscos competitius
 if (params$metode=="dinamica2") cluster="case.id" else cluster=""
 # Ajustos
@@ -855,7 +854,7 @@ taula_models<-taula_models_FG %>% bind_rows(taula_models_COX)
 ```
 
 
-```{r,include=T,eval = T}
+```{r,include=T,eval = F}
 ## Risk de TB en funció de Tipus de DM i en funció de DM prevalent incident i tipus de DM (Tipo 1 / tipo 2)
 # - HR segons model complet (ajust3) per riscos competitius
 # - Incloure-ho en table 3
@@ -871,7 +870,7 @@ mom5.1 %>%
 
 ## Figure 1
 
-```{r figura_CP_RISK, include=T, fig.asp=1, results="asis",eval = T}
+```{r figura_CP_RISK, include=T, fig.asp=1, results="asis",eval = F}
 # Graficar segons riscos competitius
 pp<-plot_cmprisk_cuminc(dt=dades,a="grup",failcode = "Event",cencode = "End of follow-up")
 pp + scale_x_continuous(breaks = c(seq(1,3650,730)))
@@ -888,14 +887,14 @@ dev.off()
 - Suplementary material
 - Format taula i format forest-plot
 
-```{r resultats8, message=FALSE, warning=FALSE, include=T, echo=FALSE,size="huge",eval = T}
+```{r resultats8, message=FALSE, warning=FALSE, include=T, echo=FALSE,size="huge",eval = F}
 taula_models %>%  kable(digits = 3,caption = "TS1. HR de risk de TB segons diferents models ajustats ") %>% 
   kableExtra::kable_styling()
 ```
 
 ### Forest plot sensitivity analysis
 
-```{r,include=T,eval = T}
+```{r,include=T,eval = F}
 forest.plot.HR(taula_models,label="var",mean="HR",lower = "Li95%CI",upper="Ls95%CI",label_X = "Hazard ratio (95% CI)",
                intercept = 1,nolabels=FALSE,
                nivell = "Model",factor1="method",label_Xvertical="Fit",
@@ -912,7 +911,7 @@ grDevices::dev.off()
 
 
 
-```{r testimputacions, eval=T, include=T}
+```{r testimputacions, eval=T, include=F}
 # generar dades imputades MICE
 dt_temp<-dades %>% 
   select(extreure.variables("imp",conductor_variables))
@@ -940,7 +939,7 @@ pp<-with(imp,crrSC::crrc(ftime=dt_temp$temps_tbc,fstatus=dt_temp$status,cov1=(dt
 
 ## Incidència TBC per pais
 
-```{r,message=FALSE, warning=FALSE, include=T, echo=FALSE,size="huge",eval = T}
+```{r,message=FALSE, warning=FALSE, include=T, echo=FALSE,size="huge",eval = F}
 dades %>% split(.$descNacionalitat.2) %>% map_dfr(~Resum_taxa_incidencia(.x,evento="event_tbc",temps="anys_lliure_tbc",valorevent="1"),.id = "Group") %>% 
   kable(caption="Taula S2. Incidència de TB per País",digits = 2) %>% 
   kableExtra::kable_styling()
@@ -949,7 +948,7 @@ dades %>% split(.$descNacionalitat.2) %>% map_dfr(~Resum_taxa_incidencia(.x,even
 
 
 
-```{r figura1, include=T,eval = T}
+```{r figura1, include=T,eval = F}
 ## Figura d'incidencia acumulada de TB per grup  
 # segons K-Meier (TBC)
 fit<-survfit(surv_tbc ~ grup, data=dades) 
@@ -964,10 +963,43 @@ pp +
   xlab("Tiempo en años") + 
   ylab("") 
 
+
+
+
+
+```
+
+```{r figura2, include=T,eval = T}
+## Figura d'incidencia acumulada de TB per grup  control DM
+# segons K-Meier (TBC)
+
+#descrTable(surv_tbc~HbA1c_7,data=dadesDM,show.ratio = T, byrow = T ,surv = T) %>% export2md(caption = "Incidència i Hazard Ratio de Tuberculosis")
+#
+
+
+fit<-survfit(surv_tbc~HbA1c_7,data=dadesDM) 
+
+pp<-ggsurvplot(fit, 
+               title="Figura 2. Incidencia acumulada de tuberculosis por control  DM  ",
+               p.val=T, censor=F, linetype="strata",
+               fun="event", 
+               cumevents = F,
+               risk.table = FALSE,xscale=365.25,break.x.by = 365.25, conf.int = T)
+pp + 
+  xlab("Tiempo en años") + 
+  ylab("") 
+
+
+
+
+
 ```
 
 
-```{r figura_COX, include=T, fig.asp=1, results="asis", eval=T, include=T}
+
+
+
+```{r figura_COX, include=T, fig.asp=1, results="asis", eval=F, include=T}
 ## Gràfica estimada del Model de cox
 if (params$metode=="dinamica2") res.cox<-coxph(surv_tbc ~ grup+cluster(case.id), data=dades) 
 if (params$metode!="dinamica2") res.cox<-coxph(surv_tbc ~ grup+sexe+age, data=dades) 
@@ -984,7 +1016,7 @@ res.cox %>% sjPlot::tab_model(show.p = FALSE)
 
 - 3.	Grado de control metabólico de la DM influye en la forma de TB (pulmonar o extrapulmonar), la gravedad y la respuesta al tratamiento.
 
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 HR.COX(x="HB_cru",event = "event_tbc",t="temps_tbc",d=dades,taulavariables = conductor_variables,c=cluster) %>% 
   kable(digits = 3,caption = "HR segons increment de HbA1c(%)") %>% kableExtra::kable_styling()
 HR.COX(x="HB_ajust",event = "event_tbc",t="temps_tbc",d=dades,taulavariables = conductor_variables,c=cluster) %>% 
@@ -1003,7 +1035,7 @@ HR.COX(x="HBcat_ajust2",event = "event_tbc",t="temps_tbc",d=dades,taulavariables
 **Només població diabetica
 
 
-```{r ultimHB, include=T,eval = T}
+```{r ultimHB, include=T,eval = F}
 # datafi 
 dt_temp<-dt_ecap %>% select(CIP,dtindex,dt_lliure_TBC) 
 dt_variables<-dt_variables %>% filter(cod=="HBA1c")
@@ -1025,7 +1057,7 @@ descrTable(event_tbc~HBA1C.ultim+HBA1C.ultim.cat+grup,data=dt_temp, show.n = T) 
 
 ## Diabetics per any de seguiment
 
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 # Numero de DM prevalents per any
 dades %>% mutate(any_DM=year(DG.DM),any_DM=ifelse(any_DM<=2007,"<=2007",as.character(any_DM))) %>% 
   group_by(any_DM) %>% filter(!is.na(any_DM)) %>%  
@@ -1036,7 +1068,7 @@ dades %>% mutate(any_DM=year(DG.DM),any_DM=ifelse(any_DM<=2007,"<=2007",as.chara
 
 ## Frequencia de casos de TBC's durant el seguiment 
 
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 # Dades de TBC
 dades %>% filter(!is.na(DET_TB)) %>% 
   select(CIP,dtindex,DET_TB,any_TBC,event_tbc,event_tbc_agencia,EV.TBC_cat,DET2_TB,TBC_agencia,seq,dt_lliure_TBC) %>% 
@@ -1067,7 +1099,7 @@ dades %>% filter(!is.na(DET_TB)) %>% filter(event_tbc==1) %>%
 
 - Selecciono primer TB 
 
-```{r filtre_agencia,include=T,eval = T}
+```{r filtre_agencia,include=F,eval = F}
 # Dubtes de si filtrar per subestudi o no
 # Grups de dades general
 # 1. Dades amb qualsevol event registrat (Agencia o E-CAP) (N=703) dels que tinc a E-CAP (Events + Antecedents) 
@@ -1087,7 +1119,7 @@ dt_agencia %>% select(CIP,DET_TB,event_tbc,event_tbc_cohort) %>% semi_join(dades
 
 ## Descriptiu de tots els casos TBC identificats per ASPB
 
-```{r resultats_agencia,include=T,eval = T}
+```{r resultats_agencia,include=T,eval = F}
 dt_temp<-dt_agencia
 formula<-formula.text("taula",y="",taulavariables = conductor_agencia)
 descrTable(formula,data=dt_temp,max.xlev = 100,show.n = T,hide.no="NO",simplify=F,method = 2, Q1=0,Q3=1) %>% 
@@ -1098,7 +1130,7 @@ descrTable(formula,data=dt_temp,max.xlev = 100,show.n = T,hide.no="NO",simplify=
 ## Descriptiu nomes events TBC del subestudi
 
 
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 # Filtro i elimino repetits
 dt_temp<-dt_agencia %>% filter(event_tbc_cohort==1 & PS==1) %>% 
   group_by(CIP) %>% slice(which.min(DET_TB)) %>% ungroup()   # Selecciono la TB primera data de TB
@@ -1110,7 +1142,7 @@ descrTable(formula,data=dt_temp,max.xlev = 100,show.n = T,hide.no="NO",simplify=
 
 ## TABLE 5. Descriptiva comparativa de events TBC del subestudi entre DM vs no DM
 
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 
 ##################################
 # 23.02.2021 [Analitica_Temps]   #
@@ -1123,7 +1155,7 @@ descrTable(formula,data=dt_temp,max.xlev = 100,show.n = T,hide.no="NO",simplify=
 
 ## TAULA S3 + forest plot de model complet 
 
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 modelcomplet<-model_HR_RCrisk_clusters(dades,"DM_ajust4",a="grup",failcode = "Event",cencode = "End of follow-up") 
 dadesmodel<-modelcomplet$resum_crrsc %>% 
   filter(!stringr::str_ends(var,"None")) %>%  # Eliminar categoria None 
@@ -1149,7 +1181,7 @@ dev.off()
 
 - Model per avaluar categoria de DM (DM1 DM2 Incident Prevalent)
 
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 dades<-dades %>% mutate(grup4=case_when(grup2=="DM1" & grup3=="DM Incident"~"Incident, tipo 1",
                                         grup2=="DM1" & grup3=="DM Prevalent"~"Prevalent tipo 1",
                                         grup2=="DM2" & grup3=="DM Incident"~"Incident tipo 2",
@@ -1180,7 +1212,7 @@ save(dades,dt_variables, file=here::here(dir_output,"output5.Rdata"))
 
 
 ## Dependenet Time Variable DM Cox   HBA1c us TBC
-```{r, include=T,eval = T}
+```{r, include=T,eval = F}
 
 #############
 #[26.3.2021]#
@@ -1388,7 +1420,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 
 ```
 ## Dependenet Time Variable DM Cox   HBA1c us TBC    MODEL1[glicada continua]
-```{r MODEL1, include=T,eval = T}
+```{r MODEL1, include=T,eval = F}
 
 #############
 #[26.3.2021]#
@@ -1410,7 +1442,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 
 ```
 ## Dependenet Time Variable DM Cox   HBA1c us TBC    MODEL2[glicada continua]
-```{r MODEL2, include=T,eval = T}
+```{r MODEL2, include=T,eval = F}
 
 #############
 #[26.3.2021]#
@@ -1438,7 +1470,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 ```
 
 ## Dependenet Time Variable DM Cox   HBA1c us TBC    MODEL3[glicada >8%]
-```{r MODEL3, include=T,eval = T}
+```{r MODEL3, include=T,eval = F}
 
 #############
 #[26.3.2021]#
@@ -1464,7 +1496,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 
 ```
 ## Dependenet Time Variable DM Cox   HBA1c us TBC    MODEL4[glicada >8%]
-```{r MODEL4, include=T,eval = T}
+```{r MODEL4, include=T,eval = F}
 
 #############
 #[26.3.2021]#
@@ -1488,7 +1520,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 
 ```
 ## Dependenet Time Variable DM Cox   HBA1c us TBC    MODEL5[glicada >9%]
-```{r MODEL5, include=T,eval = T}
+```{r MODEL5, include=T,eval = F}
 
 #############
 #[26.3.2021]#
@@ -1516,7 +1548,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 
 ```
 ## Dependenet Time Variable DM Cox   HBA1c us TBC    MODEL6[glicada >9%]
-```{r MODEL6, include=T,eval = T}
+```{r MODEL6, include=T,eval = F}
 
 #############
 #[26.3.2021]#
@@ -1541,7 +1573,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 ```
 
 ## Dependenet Time Variable DM Cox   HBA1c us TBC    MODEL7,8,9,10,11,12,13[glicada >8%,glicada >9%,+edat_CAT(>=75),cluster] + Estrat.
-```{r MODEL7, include=T,eval = T}
+```{r MODEL7, include=T,eval = F}
 
 #############
 #[30.3.2021]#
@@ -1595,7 +1627,7 @@ analitiques_temps<-analitiques_temps %>% mutate(edat_CAT=case_when(edat<75 ~ "1.
 
 ```
 ## Dependenet Time Variable DM Cox   HBA1c us TBC [val3+strata(sexe)+edat_CAT+cluster(idp)]
-```{r MODEL8, include=T,eval = T}
+```{r MODEL8, include=T,eval = F}
 
 #############
 #[30.3.2021]#
